test/error/iocheck/err8.rzy
// Error: transition guard is not allowed to write state

component
  Err8
    input
      event();
    
    implementation hfsm(A)
    
    var
      a : R{0,100};
    
    entry
      a := 0;
    end
    
    function foo():Boolean
      a := 42;
      return a > 10;
    end
    
    state A end
    state B end
    
    transition A to B by event() if foo();
    
  end

